--- a/admin/settings.html
+++ b/admin/settings.html
@@ -70,6 +70,10 @@
 <span class="material-symbols-outlined">loyalty</span>
 <p class="text-sm font-medium">Brands</p>
 </a>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="users/index.html">
+<span class="material-symbols-outlined">people</span>
+<p class="text-sm font-medium">Users</p>
+</a>
 <a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="settings.html">
 <span class="material-symbols-outlined">settings</span>
 <p class="text-sm font-semibold">Store Settings</p>
