--- a/admin/products/add.html
+++ b/admin/products/add.html
@@ -113,6 +113,10 @@
 <span class="material-symbols-outlined">loyalty</span>
 <p class="text-sm font-medium">Brands</p>
 </a>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../users/index.html">
+<span class="material-symbols-outlined">people</span>
+<p class="text-sm font-medium">Users</p>
+</a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
 <span class="material-symbols-outlined">settings</span>
 <p class="text-sm font-medium">Store Settings</p>
@@ -228,16 +232,26 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 pt-6 border-t border-slate-100 dark:border-[#393928]">
 <div class="col-span-1">
 <label class="block mb-2">
-<span class="text-slate-900 dark:text-white text-sm font-bold uppercase tracking-wider">Product Image URL</span>
-<input type="text" name="image-url" id="image-url" class="form-input mt-2 block w-full rounded-lg border-slate-200 dark:border-[#54543b] bg-slate-50 dark:bg-[#27271b] text-slate-900 dark:text-white h-12 px-4 placeholder:text-slate-400 dark:placeholder:text-slate-600 focus:ring-primary mb-4" placeholder="/images/products/brand/line.jpg"/>
+<span class="text-slate-900 dark:text-white text-sm font-bold uppercase tracking-wider">Product Images</span>
+<small class="text-slate-500 dark:text-slate-600 text-xs block mt-1">First image will be used as main product image</small>
 </label>
-<p class="text-slate-500 dark:text-slate-600 text-xs mb-4">Or upload a file:</p>
-<div class="border-2 border-dashed border-slate-200 dark:border-[#393928] rounded-xl p-8 flex flex-col items-center justify-center bg-slate-50/50 dark:bg-[#27271b]/30 group hover:border-primary transition-colors cursor-pointer">
-<input type="file" id="image-upload" accept="image/*" class="hidden"/>
-<label for="image-upload" class="cursor-pointer text-center">
+<!-- Images Preview Container -->
+<div id="images-preview-container" class="mb-4 space-y-3">
+<!-- Images will be added here dynamically -->
+</div>
+<!-- Image URL Input -->
+<div class="mb-4">
+<input type="text" name="image-url" id="image-url" class="form-input mt-2 block w-full rounded-lg border-slate-200 dark:border-[#54543b] bg-slate-50 dark:bg-[#27271b] text-slate-900 dark:text-white h-10 px-4 text-sm placeholder:text-slate-400 dark:placeholder:text-slate-600 focus:ring-primary" placeholder="Or enter image URL..."/>
+<button type="button" id="add-url-btn" class="mt-2 text-sm text-primary hover:underline font-medium">Add URL</button>
+</div>
+<!-- Upload Area -->
+<p class="text-slate-500 dark:text-slate-600 text-xs mb-4">Or upload files:</p>
+<div class="border-2 border-dashed border-slate-200 dark:border-[#393928] rounded-xl p-6 flex flex-col items-center justify-center bg-slate-50/50 dark:bg-[#27271b]/30 group hover:border-primary transition-colors cursor-pointer">
+<input type="file" id="image-upload" accept="image/*" multiple class="hidden"/>
+<label for="image-upload" class="cursor-pointer text-center w-full">
 <span class="material-symbols-outlined text-4xl text-slate-400 dark:text-[#54543b] group-hover:text-primary transition-colors">cloud_upload</span>
-<p class="mt-4 text-slate-600 dark:text-[#baba9c] text-sm font-medium">Drag and drop or <span class="text-primary font-bold">browse</span></p>
-<p class="mt-1 text-slate-400 dark:text-slate-600 text-xs text-center">PNG, JPG or WebP (Max. 5MB)<br/>Recommended 1000x1000px</p>
+<p class="mt-3 text-slate-600 dark:text-[#baba9c] text-sm font-medium">Drag and drop or <span class="text-primary font-bold">browse</span></p>
+<p class="mt-1 text-slate-400 dark:text-slate-600 text-xs text-center">PNG, JPG or WebP (Max. 5MB each)<br/>Recommended 1000x1000px</p>
 </label>
 </div>
 </div>
@@ -282,6 +296,10 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
+
+<!-- Cloudinary Services -->
+<script src="../../src/js/services/cloudinary-config.js"></script>
+<script src="../../src/js/services/cloudinary-service.js"></script>
 
 <!-- Catalog Services -->
 <script src="../../src/js/services/firebase-config.js"></script>
