--- a/admin/users/index.html
+++ b/admin/users/index.html
@@ -3,7 +3,7 @@
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>LIQUIDO | Admin Product Management</title>
+<title>LIQUIDO | Admin Users Management</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -70,17 +70,17 @@
 <span class="material-symbols-outlined">dashboard</span>
 <p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="index.html">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../products/index.html">
 <span class="material-symbols-outlined">inventory_2</span>
-<p class="text-sm font-semibold">Products</p>
+<p class="text-sm font-medium">Products</p>
 </a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../brands/index.html">
 <span class="material-symbols-outlined">loyalty</span>
 <p class="text-sm font-medium">Brands</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../users/index.html">
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="index.html">
 <span class="material-symbols-outlined">people</span>
-<p class="text-sm font-medium">Users</p>
+<p class="text-sm font-semibold">Users</p>
 </a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
 <span class="material-symbols-outlined">settings</span>
@@ -101,16 +101,15 @@
 <!-- Header Section -->
 <header class="p-8 pb-4">
 <div class="flex flex-wrap gap-2 mb-2">
-<a class="text-[#baba9c] text-sm font-medium hover:text-white transition-colors" href="#">Dashboard</a>
+<a class="text-[#baba9c] text-sm font-medium hover:text-white transition-colors" href="../dashboard.html">Dashboard</a>
 <span class="text-[#baba9c] text-sm font-medium">/</span>
-<span class="text-white text-sm font-medium">Product Management</span>
+<span class="text-white text-sm font-medium">Users Management</span>
 </div>
 <div class="flex flex-wrap justify-between items-end gap-4">
-<h2 class="text-white text-4xl font-black leading-tight tracking-tight">Product Management</h2>
-<a href="add.html" class="flex items-center gap-2 px-6 py-3 bg-primary text-background-dark rounded-xl font-bold text-sm transition-transform active:scale-95">
-<span class="material-symbols-outlined">add</span>
-<span>Add New Product</span>
-</a>
+<div>
+<h2 class="text-white text-4xl font-black leading-tight tracking-tight">Registered Users</h2>
+<p class="text-[#baba9c] text-sm mt-1">Total: <span id="total-users-count" class="text-primary font-bold">0</span> users</p>
+</div>
 </div>
 </header>
 <!-- Filters and Search -->
@@ -122,57 +121,45 @@
 <div class="absolute inset-y-0 left-0 flex items-center pl-4 pointer-events-none text-[#baba9c]">
 <span class="material-symbols-outlined">search</span>
 </div>
-<input class="w-full h-full bg-border-dark border-none rounded-xl pl-12 text-white placeholder:text-[#baba9c] focus:ring-1 focus:ring-primary text-sm" placeholder="Search products by name or SKU..." type="text"/>
+<input id="search-input" class="w-full h-full bg-border-dark border-none rounded-xl pl-12 text-white placeholder:text-[#baba9c] focus:ring-1 focus:ring-primary text-sm" placeholder="Search users by name, email, or phone..." type="text"/>
 </div>
 </div>
-<!-- Chips / Filters -->
-<div class="lg:col-span-6 flex flex-wrap gap-2 items-center justify-end">
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
-<span class="text-sm font-medium">All Brands</span>
-<span class="material-symbols-outlined text-sm">expand_more</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-primary/20 text-primary border border-primary/30">
-<span class="text-sm font-bold">Vaporesso</span>
-<span class="material-symbols-outlined text-sm">close</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
-<span class="text-sm font-medium">SMOK</span>
-<span class="material-symbols-outlined text-sm">expand_more</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
-<span class="text-sm font-medium">Category</span>
-<span class="material-symbols-outlined text-sm">filter_list</span>
-</button>
+<!-- Stats Cards -->
+<div class="lg:col-span-6 flex flex-wrap gap-4 items-center justify-end">
+<div class="flex items-center gap-2 px-4 py-2 rounded-xl bg-border-dark">
+<span class="material-symbols-outlined text-primary text-lg">people</span>
+<span class="text-white text-sm font-semibold">All Users</span>
+</div>
 </div>
 </div>
 </section>
 <!-- Table Section -->
 <section class="px-8 pb-8 flex-grow">
 <div class="bg-surface-dark border border-border-dark rounded-2xl overflow-hidden">
-<table class="w-full text-left border-collapse">
+<div id="loading-state" class="p-8 text-center">
+<div class="text-[#baba9c]">Loading users...</div>
+</div>
+<div id="error-state" class="p-8 text-center hidden">
+<div class="text-red-500">Error loading users. Please refresh the page.</div>
+</div>
+<table id="users-table" class="w-full text-left border-collapse hidden">
 <thead>
 <tr class="bg-border-dark/30 border-b border-border-dark">
-<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Product Info</th>
-<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Brand</th>
-<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Category</th>
-<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Status</th>
+<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">User Info</th>
+<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Email</th>
+<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Phone</th>
+<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Registered</th>
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest text-right">Actions</th>
 </tr>
 </thead>
-<tbody class="divide-y divide-border-dark">
-<!-- Products will be loaded dynamically from Firebase -->
+<tbody id="users-tbody" class="divide-y divide-border-dark">
+<!-- Users will be loaded dynamically from Firebase -->
 </tbody>
 </table>
-<!-- Pagination -->
-<div class="flex items-center justify-between px-6 py-4 bg-border-dark/20">
-<p class="text-xs text-[#baba9c] font-medium">Showing 1 to 4 of 48 products</p>
-<div class="flex gap-2">
-<button class="px-3 py-1 rounded-lg border border-border-dark text-[#baba9c] text-xs font-bold hover:bg-border-dark transition-colors">Previous</button>
-<button class="px-3 py-1 rounded-lg bg-primary text-background-dark text-xs font-bold">1</button>
-<button class="px-3 py-1 rounded-lg border border-border-dark text-[#baba9c] text-xs font-bold hover:bg-border-dark transition-colors">2</button>
-<button class="px-3 py-1 rounded-lg border border-border-dark text-[#baba9c] text-xs font-bold hover:bg-border-dark transition-colors">3</button>
-<button class="px-3 py-1 rounded-lg border border-border-dark text-[#baba9c] text-xs font-bold hover:bg-border-dark transition-colors">Next</button>
-</div>
+<div id="empty-state" class="p-12 text-center hidden">
+<span class="material-symbols-outlined text-6xl text-[#baba9c] mb-4">people_outline</span>
+<p class="text-[#baba9c] text-lg font-medium">No users found</p>
+<p class="text-[#baba9c] text-sm mt-2">Users will appear here once they register</p>
 </div>
 </div>
 </section>
@@ -183,10 +170,8 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
 
-<!-- Catalog Services -->
+<!-- Services -->
 <script src="../../src/js/services/firebase-config.js"></script>
-<script src="../../src/js/services/firebase-catalog-service.js"></script>
-<script src="../../src/js/services/catalog-service.js"></script>
-<script src="../../src/js/modules/catalog-init.js"></script>
-<script src="../../src/js/admin/products-list.js"></script>
+<script src="../../src/js/admin/users-list-page.js"></script>
 </body></html>
+
