--- a/public/contact.html
+++ b/public/contact.html
@@ -188,78 +188,111 @@
 </div>
 </div>
 </main>
-<footer class="mt-20 border-t border-[#393928] bg-[#121210] pt-16 pb-8 px-4 md:px-20 lg:px-40">
-<div class="max-w-[1280px] mx-auto">
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
-<div class="flex flex-col gap-6">
-<div class="flex items-center gap-2">
-<div class="size-7 text-primary">
-<svg fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<path clip-rule="evenodd" d="M24 4H6V17.3333V30.6667H24V44H42V30.6667V17.3333H24V4Z" fill="currentColor" fill-rule="evenodd"></path>
-</svg>
-</div>
-<span class="text-white text-2xl font-black tracking-tighter uppercase">LIQUIDO</span>
-</div>
-<p class="text-[#baba9c] text-sm leading-relaxed max-w-xs">
-                        Premium vaping experience curated for enthusiasts. Explore our exclusive range of boutique e-liquids and high-end hardware.
-                    </p>
-<div class="flex gap-4">
-<a class="w-10 h-10 rounded-lg bg-[#27271b] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all" href="https://www.instagram.com/liquido.vapeshop/" target="_blank" rel="noopener noreferrer">
-<svg class="size-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.947.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c.796 0 1.441.645 1.441 1.44s-.645 1.44-1.441 1.44c-.795 0-1.439-.645-1.439-1.44s.644-1.44 1.439-1.44z"></path></svg>
-</a>
-<a class="w-10 h-10 rounded-lg bg-[#27271b] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all" href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer">
-<svg class="size-5" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.056-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"></path></svg>
-</a>
-                <a class="w-10 h-10 rounded-lg bg-[#27271b] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all" href="https://www.facebook.com/liquido.vapeshop/" target="_blank" rel="noopener noreferrer">
-                    <svg class="size-5" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.324v-21.35c0-.732-.593-1.325-1.325-1.325z"></path></svg>
+<footer class="bg-charcoal border-t-2 border-primary pt-24 pb-12 px-6 lg:px-20">
+    <div class="max-w-[1440px] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-20 mb-20">
+        <div class="space-y-8">
+            <div class="flex items-center gap-3">
+                <div class="size-10 bg-primary rounded-sm flex items-center justify-center text-background-dark">
+                    <span class="material-symbols-outlined font-bold text-lg">water_drop</span>
+                </div>
+                <h2 class="text-2xl text-bold-modern tracking-tighter uppercase">LIQUIDO</h2>
+            </div>
+            <div class="space-y-4">
+                <h4 class="text-[10px] font-black uppercase tracking-widest text-primary/60">Chi Siamo</h4>
+                <p class="text-slate-400 leading-relaxed text-sm font-medium">
+                    Dal 2018, LIQUIDO ha ridefinito il panorama del vaping premium. Curiamo solo l'hardware più eccezionale e gli e-liquid artigianali per gli appassionati che rifiutano di scendere a compromessi su qualità o stile.
+                </p>
+            </div>
+            <div class="flex gap-4">
+                <a class="size-10 rounded-sm bg-white/5 flex items-center justify-center hover:bg-primary/20 transition-all border border-white/10 group"
+                    href="https://www.instagram.com/liquido.vapeshop/" target="_blank" rel="noopener noreferrer">
+                    <svg class="size-5 fill-primary" viewBox="0 0 24 24">
+                        <path
+                            d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z">
+                        </path>
+                    </svg>
                 </a>
-</div>
-</div>
-<div class="flex flex-col gap-6">
-<h4 class="text-white font-bold uppercase tracking-widest text-xs">Navigation</h4>
-<ul class="flex flex-col gap-3">
-<li><a class="text-[#baba9c] hover:text-primary text-sm transition-colors" href="#">Catalog</a></li>
-<li><a class="text-[#baba9c] hover:text-primary text-sm transition-colors" href="#">Brand Collections</a></li>
-<li><a class="text-[#baba9c] hover:text-primary text-sm transition-colors" href="#">Bestsellers</a></li>
-<li><a class="text-[#baba9c] hover:text-primary text-sm transition-colors" href="#">New Arrivals</a></li>
-<li><a class="text-[#baba9c] hover:text-primary text-sm transition-colors" href="#">Store Locations</a></li>
-</ul>
-</div>
-<div class="flex flex-col gap-6">
-<h4 class="text-white font-bold uppercase tracking-widest text-xs">Get in Touch</h4>
-<div class="flex flex-col gap-4">
-<div class="flex items-start gap-3">
-<span class="material-symbols-outlined text-primary text-xl">location_on</span>
-                    <span class="text-[#baba9c] text-sm">via Adige 43C, 00015 - Monterotondo (Rm)</span>
-</div>
-<div class="flex items-center gap-3">
-<span class="material-symbols-outlined text-primary text-xl">call</span>
-                    <span class="text-[#baba9c] text-sm">+39 379 134 5367</span>
-</div>
-<div class="flex items-center gap-3">
-<span class="material-symbols-outlined text-primary text-xl">mail</span>
-                    <span class="text-[#baba9c] text-sm">info.vaporoom@gmail.com</span>
-</div>
-</div>
-</div>
-<div class="flex flex-col gap-6">
-<h4 class="text-white font-bold uppercase tracking-widest text-xs">Newsletter</h4>
-<p class="text-[#baba9c] text-sm">Subscribe to receive updates on limited drops.</p>
-<div class="flex gap-2">
-<input class="bg-[#181811] border border-[#393928] rounded-lg px-4 py-2 text-sm text-white w-full focus:outline-none focus:border-primary" placeholder="Email" type="email"/>
-<button class="bg-primary text-black font-bold px-4 py-2 rounded-lg text-sm hover:brightness-110 transition-all">Join</button>
-</div>
-</div>
-</div>
-<div class="border-t border-[#393928] pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
-<p class="text-[#baba9c] text-xs">© 2024 LIQUIDO Vape Store. Crafted for the connoisseur.</p>
-<div class="flex gap-6 text-xs text-[#baba9c]">
-<a class="hover:text-primary transition-colors underline" href="#">Privacy Policy</a>
-<a class="hover:text-primary transition-colors underline" href="#">Terms of Service</a>
-<a class="hover:text-primary transition-colors underline" href="#">Cookie Settings</a>
-</div>
-</div>
-</div>
+                <a class="size-10 rounded-sm bg-white/5 flex items-center justify-center hover:bg-primary/20 transition-all border border-white/10 group"
+                    href="https://www.facebook.com/liquido.vapeshop/" target="_blank" rel="noopener noreferrer">
+                    <svg class="size-5 fill-primary" viewBox="0 0 24 24">
+                        <path
+                            d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.469h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.469h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z">
+                        </path>
+                    </svg>
+                </a>
+                <a class="size-10 rounded-sm bg-white/5 flex items-center justify-center hover:bg-primary/20 transition-all border border-white/10 group"
+                    href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer">
+                    <svg class="size-5 fill-primary" viewBox="0 0 24 24">
+                        <path
+                            d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.056-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z">
+                        </path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <div class="space-y-8">
+            <h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Link Rapidi</h4>
+            <ul class="space-y-5 text-slate-500 text-xs font-bold uppercase tracking-widest">
+                <li><a class="hover:text-primary transition-colors flex items-center gap-2" href="index.html"><span
+                            class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Home</a>
+                </li>
+                <li><a class="hover:text-primary transition-colors flex items-center gap-2" href="brands.html"><span
+                            class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Marchi</a>
+                </li>
+                <li><a class="hover:text-primary transition-colors flex items-center gap-2" href="products.html"><span
+                            class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Prodotti</a>
+                </li>
+                <li><a class="hover:text-primary transition-colors flex items-center gap-2" href="contact.html"><span
+                            class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Contatti</a>
+                </li>
+            </ul>
+        </div>
+        <div class="space-y-8">
+            <h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Marchi Partner</h4>
+            <ul class="space-y-5 text-slate-500 text-xs font-bold uppercase tracking-widest">
+                <li><a class="hover:text-primary transition-colors" href="#">GeekVape</a></li>
+                <li><a class="hover:text-primary transition-colors" href="#">Vaporesso</a></li>
+                <li><a class="hover:text-primary transition-colors" href="#">Dinner Lady</a></li>
+                <li><a class="hover:text-primary transition-colors" href="#">Voopoo</a></li>
+                <li><a class="hover:text-primary transition-colors" href="#">Smok</a></li>
+            </ul>
+        </div>
+        <div class="space-y-8">
+            <h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Informazioni Contatto</h4>
+            <div class="space-y-6">
+                <div class="flex gap-4">
+                    <span class="material-symbols-outlined text-primary text-xl">location_on</span>
+                    <div class="text-slate-400 text-sm font-medium leading-relaxed">
+                        via Adige 43C<br />
+                        00015 - Monterotondo (Rm)
+                    </div>
+                </div>
+                <div class="flex gap-4 items-center">
+                    <span class="material-symbols-outlined text-primary text-xl">call</span>
+                    <a class="text-slate-400 text-sm font-medium hover:text-white transition-colors"
+                        href="tel:+393791345367">+39 379 134 5367</a>
+                </div>
+                <div class="flex gap-4 items-center">
+                    <span class="material-symbols-outlined text-primary text-xl">mail</span>
+                    <a class="text-slate-400 text-sm font-medium hover:text-white transition-colors"
+                        href="mailto:info.vaporoom@gmail.com">info.vaporoom@gmail.com</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div
+        class="max-w-[1440px] mx-auto pt-12 border-t border-white/5 flex flex-col md:flex-row justify-between gap-8 items-center text-[10px] text-slate-500 font-black uppercase tracking-[0.3em]">
+        <p>Copyright 2024 LIQUIDO. TUTTI I DIRITTI RISERVATI.</p>
+        <div class="flex gap-10">
+            <a class="hover:text-white transition-colors" href="#">Privacy Policy</a>
+            <a class="hover:text-white transition-colors" href="#">Termini di Servizio</a>
+            <a class="hover:text-white transition-colors" href="#">Conformità</a>
+        </div>
+        <div class="flex items-center gap-2 text-primary border border-primary/20 px-4 py-2 rounded-sm bg-primary/5">
+            <span class="material-symbols-outlined text-sm">verified_user</span>
+            18+ SOLO • GODITI RESPONSABILMENTE
+        </div>
+    </div>
 </footer>
     <script src="../src/js/modules/age-verification.js"></script>
 </body></html>
