feat: Implement special animation for MyLiquido links across multiple HTML files to enhance visual appeal and user interaction.

--- a/public/contact.html
+++ b/public/contact.html
@@ -46,6 +46,30 @@
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
         }
+        /* Animation spéciale pour MYLIQUIDO */
+        .myliquido-special {
+            color: var(--primary-color);
+            animation: myliquidoPulse 2s ease-in-out infinite;
+        }
+        .myliquido-special:hover {
+            animation: myliquidoPulseHover 0.6s ease-in-out;
+        }
+        @keyframes myliquidoPulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+        }
+        @keyframes myliquidoPulseHover {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+        }
     </style>
 </head>
 <body class="bg-background-dark text-white transition-colors duration-300">
@@ -69,7 +93,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors myliquido-special" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="contact.html">Contatti</a>
 </nav>
