--- a/public/about.html
+++ b/public/about.html
@@ -56,6 +56,30 @@
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
         }
+        /* Animation spéciale pour MYLIQUIDO */
+        .myliquido-special {
+            color: var(--primary-color);
+            animation: myliquidoPulse 2s ease-in-out infinite;
+        }
+        .myliquido-special:hover {
+            animation: myliquidoPulseHover 0.6s ease-in-out;
+        }
+        @keyframes myliquidoPulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+        }
+        @keyframes myliquidoPulseHover {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+        }
     </style>
 </head>
 
@@ -80,7 +104,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors myliquido-special" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
 </nav>
